<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>
    <Button
            android:text="@string/button_go_to_new_health_facility_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_go_to_new_health_facility"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:textAllCaps="false"/>
    <Button
            android:text="@string/button_go_to_select_disease_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_go_to_select_disease" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/button_go_to_new_health_facility"
            app:layout_constraintEnd_toEndOf="@+id/button_go_to_new_health_facility"
            app:layout_constraintStart_toStartOf="@+id/button_go_to_new_health_facility" android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>