<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.selectDisease.SelectDiseaseActivity">

    <Button
        android:id="@+id/button_capture_image_select_disease"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_capture_image_select_disease"
        app:layout_constraintBottom_toTopOf="@+id/button_back_select_disease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_back_select_disease"
        style="@style/AppTheme.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/button_back_select_disease"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_capture_image_select_disease"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_capture_image_select_disease" />

    <Spinner
        android:id="@+id/spinner_diseases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:entries="@array/diseases"
        android:spinnerMode="dropdown"
        android:theme="@style/AppTheme.SpinnerTheme"
        app:layout_constraintEnd_toEndOf="@+id/text_select_disease_spinner_hint"
        app:layout_constraintStart_toStartOf="@+id/text_select_disease_spinner_hint"
        app:layout_constraintTop_toBottomOf="@+id/text_select_disease_spinner_hint" />

    <TextView
        android:id="@+id/text_select_disease_spinner_hint"
        style="@style/TextHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_select_disease_spinner_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
